--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 guessedColorNumber3,
                 guessedColorNumber4);
             initGuess();
-            updateView
+            updateView();
         }
 
         // hjelpefunksjoner
